# rsduck

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  init.sql  rsduck.toml
.github/workflows/: ci.yml  macos-package-debug.yml
demo/: README.md
demo/python/: 4_1_sector_full_sync.py  4_2_sector_incremental_refresh.py  4_3_sector_daily_aggregation.py  4_4_make_parquet_fixture.py  4_4_parquet_import.py  4_5_data_quality_check.py  4_6_snapshot_restore.py  4_7_permission_audit.py  4_8_http_continuous_write.py  4_8_mysql_continuous_write.py  5_1_web_console_api_smoke.py  common.py  continuous_write_common.py
doc/: agent-vector-memory.en.md  agent-vector-memory.md  architecture-overview.en.md  architecture-overview.md  duckdb-database-import-design.md  duckdb-pool-design.md  duckdb_direct_metadata_refactor_plan.md  mysql-compat-auth-catalog-design.en.md  mysql-compat-auth-catalog-design.md  mysql_only_catalog_refactor_plan.md  mysql_protocol_todo.md  rsduck-design.md  rsduck-practical-examples.en.md  rsduck-practical-examples.md  rsduck-vector-memory-overview.en.md  rsduck-vector-memory-overview.md  rsduck_pg_catalog_design.md  todo.md
packaging/linux/: install-service.sh  rsduck-tray.desktop  uninstall-service.sh
packaging/linux/systemd/: rsduck.service
packaging/macos/: uninstall-service.sh
packaging/macos/launchd/: com.dripai.rsduck-tray.plist  com.dripai.rsduck.plist
packaging/macos/scripts/: postinstall
packaging/windows-installer/: rsduck.iss
packaging/windows-service/: install-service.ps1  rsduck-service.xml  uninstall-service.ps1
scripts/: market_tables.sql  realtime_writer.py  realtime_writer_http.py  rsduck_load_test.py  sh.md
src/: auth.rs  catalog.rs  config.rs  db.rs  duckdb_import.rs  lib.rs  logging.rs  main.rs  mysql_compat.rs  pg_compat.rs  pg_server.rs  process_lock.rs  shutdown.rs  sql_route.rs  web_server.rs
src/catalog/: bootstrap.rs  checksum.rs  guard.rs  journal.rs  lookup.rs  mod.rs  model.rs  oid.rs  recovery.rs  sql_util.rs  storage.rs  tests.rs  type_mapping.rs
src/catalog/auth/: authorize.rs  mod.rs  password.rs  principal.rs  privilege.rs
src/catalog/mutation/: alter_table.rs  comment.rs  constraint.rs  drop.rs  executor.rs  grant.rs  index.rs  mod.rs  parser.rs  relation.rs  schema.rs  table.rs  user_role.rs  vector_index.rs  view.rs
src/catalog/partition/: create.rs  entrypoint.rs  maintenance.rs  mod.rs  (+5 more)
src/db/: engine.rs  error.rs  execute.rs  extensions.rs  mod.rs  model.rs  params.rs  restore.rs  snapshot.rs  tests.rs  vector.rs  worker.rs
src/pg_compat/: catalog.rs  function.rs  functions.rs  mod.rs  projections.rs  rewrite.rs  settings.rs  show.rs  tests.rs
src/server/: mod.rs  mysql.rs  pg.rs  web.rs  web_assets.rs
web/: index.html  package-lock.json  package.json
web/src/: editor.js
(+16 files in other folders)
