[package]
name = "rsduck"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
pgwire = "0.26"
duckdb = { version = "1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
sqlparser = "0.62.0"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
fs2 = "0.4"
bytes = "1"
postgres-types = { version = "0.2", features = ["with-uuid-1"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
uuid = "1"
sha2 = "0.10"

[dev-dependencies]
tokio-postgres = "0.7"
