[package]
name = "rsduck"
version = "0.1.22"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
duckdb = { version = "=1.10504.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
sqlparser = "0.62.0"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
fs2 = "0.4"
bytes = "1"
rust_decimal = "1"
uuid = "1"
sha2 = "0.10"
open = "=5.4.0"
reqwest = { version = "=0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tao = "=0.34.5"
tray-icon = "=0.24.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_Shell"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
